# ros2-gz-minimal-example

./: .gitignore  README.md  flake.nix
.cache/clangd/index/: controller.cpp.9B998B94757839FD.idx  testlib.h.89D898D669FF4560.idx
docs/: ros-gazebo-architecture.md  zig-lidar-handler-ideas.md
install/: local_setup.sh  setup.sh
install/minimal_gz_demo/lib/minimal_gz_demo/: controller
install/minimal_gz_demo/share/ament_index/resource_index/package_run_dependencies/: minimal_gz_demo
install/minimal_gz_demo/share/ament_index/resource_index/parent_prefix_path/: minimal_gz_demo
install/minimal_gz_demo/share/minimal_gz_demo/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/minimal_gz_demo/share/minimal_gz_demo/cmake/: minimal_gz_demoConfig.cmake
install/minimal_gz_demo/share/minimal_gz_demo/launch/: sim.launch.py
install/minimal_gz_demo/share/minimal_gz_demo/worlds/: minimal_diff_drive.sdf
pkgs/testlib/: build.zig  build.zig.zon
pkgs/testlib/.zig-cache/o/a9deafdbba846d386e2f0834e50c0ea3/: cimport.zig
pkgs/testlib/.zig-cache/o/dee79dd08b11724deb2c2926a6854435/: cimport.zig
pkgs/testlib/include/: testlib.h
pkgs/testlib/install/: local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
pkgs/testlib/src/: main.zig  root.zig
pkgs/testlib/zig-out/include/: testlib.h
ros_ws/src/minimal_gz_demo/: CMakeLists.txt
ros_ws/src/minimal_gz_demo/launch/: sim.launch.py
ros_ws/src/minimal_gz_demo/src/: controller.cpp
ros_ws/src/minimal_gz_demo/worlds/: minimal_diff_drive.sdf
scripts/: build-demo.sh  run-demo.sh
