<?xml version="1.0"?>
<package format="3">
  <name>minimal_gz_demo</name>
  <version>0.0.0</version>
  <description>Minimal Gazebo and ROS 2 integration example.</description>
  <maintainer email="felix@example.com">Felix</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
